<resources>
    <string name="app_name">Meu Dinheiro</string>
    <string name="label_dashboard">Painel</string>
    <string name="label_cards">Cartões</string>
    <string name="label_bills">Despesas</string>
    <string name="label_profile">Perfil</string>
    <string name="label_settings">Configurações</string>
    <string name="title_cards">Cartões</string>

    <string name="template_string_card_due_day">Vencimento: %d</string>
    <string name="template_string_card_expiration_date">Validade: %s</string>
    <string name="loading">Carregando...</string>
    <string name="label_due_day">Vencimento:</string>
    <string name="label_expiration_date">Validade:</string>
    <string name="label_total_expenses">Total de despesas:</string>
    <string name="label_excluir">Remover</string>
    <string name="label_editar">Editar</string>
    <string name="label_expenses">Despesas</string>
</resources>